--- a/numpy/numpy_task.ipynb
+++ b/numpy/numpy_task.ipynb
@@ -13,7 +13,7 @@
    "id": "698607b7-06e3-4105-aff6-dc14210cd27d",
    "metadata": {},
    "source": [
-    "Import the numpy package under the name np"
+    "### Import the numpy package under the name np"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "id": "8d22754c-2be8-48e2-abc3-90f6d8ac91b0",
    "metadata": {},
    "source": [
-    "Print the numpy version and the configuration"
+    "### Print the numpy version and the configuration"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "id": "f95e8774-ed3f-4bb7-adc0-2c18b1efbcf7",
    "metadata": {},
    "source": [
-    "Create a null vector of size 10 "
+    "### Create a null vector of size 10 "
    ]
   },
   {
@@ -133,7 +133,7 @@
    "id": "77dbf959-a09f-4203-b8c5-1f33640f22eb",
    "metadata": {},
    "source": [
-    "How to find the memory size of any array "
+    "### How to find the memory size of any array "
    ]
   },
   {
@@ -164,7 +164,7 @@
    "id": "366de6f2-739c-4c1f-9c6b-2c84583843ff",
    "metadata": {},
    "source": [
-    "How to get the documentation of the numpy add function from the command line?"
+    "### How to get the documentation of the numpy add function from the command line?"
    ]
   },
   {
@@ -913,7 +913,7 @@
    "id": "15cec57b-1ee6-4fae-8bbc-4cd45743e5b9",
    "metadata": {},
    "source": [
-    "Create a null vector of size 10 but the fifth value which is 1"
+    "### Create a null vector of size 10 but the fifth value which is 1"
    ]
   },
   {
@@ -947,7 +947,7 @@
    "id": "3757de93-1d65-4d6d-b287-6b9ef3af9605",
    "metadata": {},
    "source": [
-    " Create a vector with values ranging from 10 to 49"
+    "###  Create a vector with values ranging from 10 to 49"
    ]
   },
   {
@@ -979,7 +979,7 @@
    "id": "f4e32472-11b3-4ab2-bc34-a5d2b4559758",
    "metadata": {},
    "source": [
-    "Reverse a vector (first element becomes last)"
+    "### Reverse a vector (first element becomes last)"
    ]
   },
   {
@@ -1000,7 +1000,7 @@
    "id": "27728013-9565-42f5-81c2-40f8b1c7a538",
    "metadata": {},
    "source": [
-    "Create a 3x3 matrix with values ranging from 0 to 8 "
+    "### Create a 3x3 matrix with values ranging from 0 to 8 "
    ]
   },
   {
@@ -1032,7 +1032,7 @@
    "id": "2920d790-3f1c-4e34-a50c-89b3ad076658",
    "metadata": {},
    "source": [
-    "Find indices of non-zero elements from [1,2,0,0,4,0]"
+    "### Find indices of non-zero elements from [1,2,0,0,4,0]"
    ]
   },
   {
@@ -1095,7 +1095,7 @@
    "id": "55066cfc-354c-490e-a6a9-30296370fdb5",
    "metadata": {},
    "source": [
-    "Create a 3x3x3 array with random values"
+    "### Create a 3x3x3 array with random values"
    ]
   },
   {
@@ -1135,7 +1135,7 @@
    "id": "de88f830-b60a-4f55-b909-2e99d05af21c",
    "metadata": {},
    "source": [
-    "Create a 10x10 array with random values and find the minimum and maximum values"
+    "### Create a 10x10 array with random values and find the minimum and maximum values"
    ]
   },
   {
@@ -1167,7 +1167,7 @@
    "id": "2440c8cd-92ba-4a61-a9d8-1338e7124513",
    "metadata": {},
    "source": [
-    "Create a random vector of size 30 and find the mean value"
+    "### Create a random vector of size 30 and find the mean value"
    ]
   },
   {
@@ -1197,7 +1197,7 @@
    "id": "df191447-1a9b-44c1-b10e-811dd7965019",
    "metadata": {},
    "source": [
-    " Create a 2d array with 1 on the border and 0 inside"
+    "###  Create a 2d array with 1 on the border and 0 inside"
    ]
   },
   {
@@ -1232,7 +1232,7 @@
    "id": "2341eea0-dc23-41e8-b206-803d7f22e203",
    "metadata": {},
    "source": [
-    "How to add a border (filled with 0's) around an existing array?"
+    "### How to add a border (filled with 0's) around an existing array?"
    ]
   },
   {
@@ -1271,7 +1271,7 @@
    "id": "e1397fd8-f2b3-43e0-a9e4-8a2928d1b3a4",
    "metadata": {},
    "source": [
-    "What is the result of the following expression?"
+    "### What is the result of the following expression?"
    ]
   },
   {
@@ -1305,7 +1305,7 @@
    "id": "49310cce-d096-43a2-a429-ce828f48004e",
    "metadata": {},
    "source": [
-    " Create a 5x5 matrix with values 1,2,3,4 just below the diagonal "
+    "###  Create a 5x5 matrix with values 1,2,3,4 just below the diagonal "
    ]
   },
   {
@@ -1381,7 +1381,7 @@
    "id": "a8eeae0d-b096-4fe7-b141-8d209df228fb",
    "metadata": {},
    "source": [
-    "Consider a (6,7,8) shape array, what is the index (x,y,z) of the 100th element?"
+    "### Consider a (6,7,8) shape array, what is the index (x,y,z) of the 100th element?"
    ]
   },
   {
@@ -1418,7 +1418,7 @@
    "id": "bffee17b-a5ec-485b-ba03-f3370132a2a6",
    "metadata": {},
    "source": [
-    " Create a checkerboard 8x8 matrix using the tile function"
+    "###  Create a checkerboard 8x8 matrix using the tile function"
    ]
   },
   {
@@ -1459,7 +1459,7 @@
    "id": "374df036-d7b5-4c68-a118-31b6f5be6cd4",
    "metadata": {},
    "source": [
-    " Normalize a 5x5 random matrix"
+    "###  Normalize a 5x5 random matrix"
    ]
   },
   {
